--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,17 +17,21 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  bloc: ^0.13.0
+  flutter_bloc: ^0.13.0
+  equatable: ^0.2.3
+
   flutter:
     sdk: flutter
-
+    
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
+  pedantic: '1.5.0'
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
