--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: App for animals.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.0.1
+version: 0.0.2
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -29,7 +29,7 @@ dependencies:
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
-  pedantic: '1.5.0'
+  perfectionist: '^2.0.0'
   flutter_test:
     sdk: flutter
 
