--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_bloc: ^0.13.0
   equatable: ^0.2.3
   material_design_icons_flutter: ^3.2.3595
+  google_maps_flutter: ^0.5.13
 
   flutter:
     sdk: flutter
