--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@
 **/android/gradlew
 **/android/gradlew.bat
 **/android/local.properties
+**/android/gradle.properties
 **/android/**/GeneratedPluginRegistrant.java
 
 # iOS/XCode related
