--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,19 +17,25 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  # bloc pattern
   bloc: ^0.13.0
   flutter_bloc: ^0.13.0
   equatable: ^0.2.3
-  material_design_icons_flutter: ^3.2.3595
+
+  # map
   google_maps_flutter: ^0.5.13
+
+  # image
   cached_network_image: ^0.8.0
-  
+
+  # light/dark theme
+  dynamic_theme: ^1.0.0
+
   flutter:
     sdk: flutter
     
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  # icons
+  material_design_icons_flutter: ^3.2.3595
 
 dev_dependencies:
   perfectionist: '^2.0.0'
