--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,19 +17,24 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  # bloc pattern
-  bloc: ^0.13.0
-  flutter_bloc: ^0.13.0
-  equatable: ^0.2.3
+  rect_getter: ^0.0.1
+
+  # state
+  bloc: ^0.14.4
+  flutter_bloc: ^0.19.0
   flutter_tindercard: ^0.1.4
+
   # map
   google_maps_flutter: ^0.5.13
 
   # image
-  cached_network_image: ^0.8.0
+  cached_network_image: ^1.0.0
 
   # light/dark theme
-  dynamic_theme: ^1.0.0
+  dynamic_theme: ^1.0.1
+
+  #tools
+  equatable: ^0.2.6
 
   flutter:
     sdk: flutter
@@ -40,7 +45,6 @@ dependencies:
   material_design_icons_flutter: ^3.2.3595
 
 dev_dependencies:
-  perfectionist: '^2.0.0'
   flutter_test:
     sdk: flutter
 
