--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,9 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  overlay_support: ^1.0.0
+  sliding_up_panel: ^0.3.4
   rect_getter: ^0.0.1
-
   # state
   bloc: ^0.14.4
   flutter_bloc: ^0.19.0
