update pet card and filter

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,7 +32,7 @@ android {
     }
 
     defaultConfig {
-        manifestPlaceholders = [apiKeyGM:GOOGLE_MAP_KEY]
+        // manifestPlaceholders = [apiKeyGM:GOOGLE_MAP_KEY]
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.shelters"
         minSdkVersion 16
