--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,36 +17,24 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  overlay_support: ^1.0.0
-  sliding_up_panel: ^0.3.4
-  # state
   bloc: ^0.14.4
-  flutter_bloc: ^0.19.0
-
-  # map
-  google_maps_flutter: ^0.5.13
-
-  # image
-  cached_network_image: ^1.0.0
-  photo_view: ^0.4.2
-
-  # light/dark theme
-  dynamic_theme: ^1.0.1
-
-  #tools
+  cached_network_image: ^2.0.0
   equatable: ^0.2.6
-
+  flutter_bloc: ^0.19.0
+  flutter_staggered_grid_view: ^0.3.0
+  material_design_icons_flutter: ^3.2.3595
+  shimmer: ^1.0.1
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter  
-    
-  # icons
-  material_design_icons_flutter: ^3.2.3595
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_driver:
+    sdk: flutter
+  test: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
