--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,13 +17,13 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  bloc: ^0.14.4
+  bloc: ^3.0.0
   cached_network_image: ^2.0.0
   equatable: ^0.2.6
-  flutter_bloc: ^0.19.0
-  flutter_staggered_grid_view: ^0.3.0
+  flutter_bloc: ^3.2.0
   material_design_icons_flutter: ^3.2.3595
   shimmer: ^1.0.1
+  sliding_up_panel: ^1.0.0
   flutter:
     sdk: flutter
   flutter_localizations:
