add settings panel, refactoring

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,14 +20,15 @@ dependencies:
   bloc: ^3.0.0
   cached_network_image: ^2.0.0
   equatable: ^0.2.6
-  flutter_bloc: ^3.2.0
-  material_design_icons_flutter: ^3.2.3595
-  shimmer: ^1.0.1
-  sliding_up_panel: ^1.0.0
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter  
+  flutter_bloc: ^3.2.0
+  flutter_swiper: ^1.1.6
+  material_design_icons_flutter: ^3.2.3595
+  shimmer: ^1.0.1
+  sliding_up_panel: ^1.0.0
 
 dev_dependencies:
   flutter_test:
