--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_swiper: ^1.1.6
+  firebase_auth: ^0.15.5+2
+  firebase_core: ^0.4.4+2
+  firebase_database: ^3.1.3
+  google_sign_in: ^4.1.4
   material_design_icons_flutter: ^3.2.3595
   multi_image_picker: ^4.6.1
   provider: ^4.0.4
