--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,17 +23,20 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_svg: ^0.17.2
   flutter_swiper: ^1.1.6
   firebase_auth: ^0.15.5+2
   firebase_core: ^0.4.4+2
   firebase_database: ^3.1.3
+  flutter_signin_button: ^1.0.0
   google_sign_in: ^4.1.4
+  keyboard_visibility: ^0.5.6
   material_design_icons_flutter: ^3.2.3595
   multi_image_picker: ^4.6.1
   provider: ^4.0.4
   shimmer: ^1.0.1
   sliding_up_panel: ^1.0.0
-
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -53,7 +56,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/logo.svg
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
