update create type, date

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   provider: ^4.0.4
   shimmer: ^1.0.1
   sliding_up_panel: ^1.0.0
+  timeago: ^2.0.26
   
 dev_dependencies:
   flutter_test:
