--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,11 @@ dependencies:
   flutter_signin_button: ^1.0.0
   google_sign_in: ^4.1.4
   keyboard_visibility: ^0.5.6
+  mask_text_input_formatter: ^1.0.6
   material_design_icons_flutter: ^3.2.3595
   multi_image_picker: ^4.6.1
   provider: ^4.0.4
+  shared_preferences: ^0.5.6+2
   shimmer: ^1.0.1
   sliding_up_panel: ^1.0.0
   timeago: ^2.0.26
