--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,18 +19,20 @@ environment:
 dependencies:
   cached_network_image: ^2.0.0
   equatable: ^1.1.0
-  flutter:
-    sdk: flutter
-  flutter_localizations:
-    sdk: flutter
-  flutter_svg: ^0.17.2
-  flutter_swiper: ^1.1.6
   firebase_auth: ^0.15.5+2
   firebase_core: ^0.4.4+2
   firebase_database: ^3.1.3
+  flutter:
+    sdk: flutter
+  flutter_svg: ^0.17.2
+  flutter_swiper: ^1.1.6
+  flutter_localizations:
+    sdk: flutter
+  flutter_map: ^0.8.2
   flutter_signin_button: ^1.0.0
   google_sign_in: ^4.1.4
   keyboard_visibility: ^0.5.6
+  latlong: ^0.6.1
   mask_text_input_formatter: ^1.0.6
   material_design_icons_flutter: ^3.2.3595
   multi_image_picker: ^4.6.1
