--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter_map: ^0.8.2
   flutter_signin_button: ^1.0.0
   google_sign_in: ^4.1.4
-  keyboard_visibility: ^0.5.6
+  keyboard_utils: ^1.2.0
   latlong: ^0.6.1
   mask_text_input_formatter: ^1.0.6
   material_design_icons_flutter: ^3.2.3595
