--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_responsive: ^0.0.6
+  flutter_share: ^1.0.2+1
   flutter_swiper: ^1.1.6
   get: ^2.5.9
   material_design_icons_flutter: ^4.0.5245
