--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,12 +21,16 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  auto_size_text: ^2.1.0
   flutter:
     sdk: flutter
   flutter_responsive: ^0.0.6
   flutter_share: ^1.0.2+1
+  flutter_svg: ^0.17.4
   flutter_swiper: ^1.1.6
   get: ^2.5.9
+  google_fonts: ^1.1.0
+  google_sign_in_web: ^0.9.1+1
   material_design_icons_flutter: ^4.0.5245
   sliding_up_panel: ^1.0.2
   provider: ^4.1.2
@@ -47,8 +51,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
