--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ environment:
 
 dependencies:
   auto_size_text: ^2.1.0
+  cached_network_image: ^2.2.0+1
   flutter:
     sdk: flutter
   flutter_responsive: ^0.0.6
