--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,13 @@ environment:
 dependencies:
   auto_size_text: ^2.1.0
   cached_network_image: ^2.2.0+1
+  carousel_slider: ^2.1.0
   flutter:
     sdk: flutter
   flutter_responsive: ^0.0.6
   flutter_share: ^1.0.2+1
   flutter_svg: ^0.17.4
-  flutter_swiper: ^1.1.6
+  # flutter_swiper: ^1.1.6
   get: ^2.5.9
   google_fonts: ^1.1.0
   google_sign_in_web: ^0.9.1+1
