--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ environment:
 
 dependencies:
   auto_size_text: ^2.1.0
+  autocomplete_textfield: ^1.7.3
   cached_network_image: ^2.2.0+1
   carousel_slider: ^2.1.0
   flutter:
