--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,6 +37,8 @@ android {
     }
 
     defaultConfig {
+        versionCode 1
+        versionName "1.0"
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.shelters"
         minSdkVersion 16
