--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,19 +27,23 @@ dependencies:
   carousel_slider: ^2.1.0
   flutter:
     sdk: flutter
+  flutter_i18n: ^0.15.0
   flutter_responsive: ^0.0.6
   flutter_share: ^1.0.2+1
-  flutter_svg: ^0.17.4
   get_version: ^0.2.2
   get: ^2.5.9
   google_fonts: ^1.1.0
   google_sign_in_web: ^0.9.1+1
   material_design_icons_flutter: ^4.0.5245
+  shared_preferences: ^0.5.7+3
   sliding_up_panel: ^1.0.2
+  timeago: ^2.0.26
   provider: ^4.1.2
 
 dev_dependencies:
   flutter_test:
+    sdk: flutter
+  flutter_localizations:
     sdk: flutter
 
 # For information on the generic Dart part of this file, see the
@@ -55,9 +59,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/flutter_i18n/
   #   - images/a_dot_ham.jpeg
 
+  fonts:
+    - family:  SheltersIcon
+      fonts:
+       - asset: fonts/SheltersIcon.ttf
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
