--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   auto_size_text: ^2.1.0
   autocomplete_textfield: ^1.7.3
   cached_network_image: ^2.2.0+1
-  carousel_slider: ^2.1.0
+  extended_image: ^0.9.0
   flutter:
     sdk: flutter
   flutter_i18n: ^0.15.0
