--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,9 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  auto_size_text: ^2.1.0
   autocomplete_textfield: ^1.7.3
   cached_network_image: ^2.2.0+1
+  dotted_border: ^1.0.5
   extended_image: ^0.9.0
   flutter:
     sdk: flutter
@@ -35,6 +35,7 @@ dependencies:
   google_fonts: ^1.1.0
   google_sign_in_web: ^0.9.1+1
   material_design_icons_flutter: ^4.0.5245
+  multi_image_picker: ^4.6.7
   shared_preferences: ^0.5.7+3
   sliding_up_panel: ^1.0.2
   timeago: ^2.0.26
