--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ environment:
 
 dependencies:
   autocomplete_textfield: ^1.7.3
+  bot_toast: ^3.0.0
   cached_network_image: ^2.2.0+1
   dotted_border: ^1.0.5
   extended_image: ^0.9.0
@@ -62,7 +63,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/flutter_i18n/
-  #   - images/a_dot_ham.jpeg
+    - assets/data/
 
   fonts:
     - family:  SheltersIcon
