--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,18 +21,14 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  autocomplete_textfield: ^1.7.3
   bot_toast: ^3.0.0
   cached_network_image: ^2.2.0+1
   dotted_border: ^1.0.5
-  extended_image: ^0.9.0
+  extended_image: ^1.1.1
   flutter:
     sdk: flutter
-  flutter_i18n: ^0.15.0
-  flutter_responsive: ^0.0.6
+  flutter_i18n: ^0.19.2
   flutter_secure_storage: ^3.3.3
-  get_version: ^0.2.2
-  get: ^2.5.9
   google_fonts: ^1.1.0
   google_sign_in_web: ^0.9.1+1
   material_design_icons_flutter: ^4.0.5245
@@ -41,9 +37,16 @@ dependencies:
   shared_preferences: ^0.5.7+3
   sliding_up_panel: ^1.0.2
   timeago: ^2.0.26
-  provider: ^4.1.2
+  provider: ^4.1.3
 
 dev_dependencies:
+
+  # flutter pub run dependency_validator
+  dependency_validator: ^1.5.0
+
+  # flutter pub run import_sorter:main
+  import_sorter: ^4.2.1
+
   flutter_test:
     sdk: flutter
   flutter_localizations:
@@ -51,7 +54,8 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
+import_sorter:
+  comments: false
 # The following section is specific to Flutter.
 flutter:
 
